--- a/ceodesk.html
+++ b/ceodesk.html
@@ -39,78 +39,170 @@
     </header>
 
     <div class="category">
-      <div class="child green">Policy & Research ></div>
-      <div class="child grey">New Report: 2022 State of Enterprise</div>
+      <div class="child green">News & Media ></div>
+      <div class="child grey">New Report: From the CEO’s Desk</div>
     </div>
 
     <article class="article">
       <div class="article_body">
         <div class="image">
-          <img src="images/yoe1.png" alt="" />
+          <img src="images/CEO_desk.jpg" alt="" />
         </div>
         <div class="article_detail">
-          <div class="child green">Policy,Insight |</div>
+          <div class="child green">News,Media |</div>
           <div class="child">April 12, 2022 |</div>
-          <div class="child">Peter Allan |</div>
+          <div class="child">Obi Ibekwe |</div>
           <div class="child">Comments: 0</div>
         </div>
-        <div class="md_heading">New Report: 2022 State of Enterprise</div>
+        <div class="md_heading">From the CEO’s Desk</div>
         <div class="article_text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non
-            sapien accumsan, commodo turpis a, accumsan sem. Duis sit amet
-            lectus et nisl rutrum auctor at a ligula. Sed pharetra dui mauris,
-            id euismod ipsum gravida sit amet. Nulla mattis eu nisi congue
-            facilisis. Quisque sed ipsum vel odio bibendum bibendum blandit eu
-            sem. Mauris eget leo eleifend, maximus lorem sed, suscipit nisi.
-            Vestibulum tempor faucibus massa eget fringilla. Suspendisse
-            convallis euismod quam. Donec tincidunt interdum ante, in iaculis
-            lacus posuere et. Donec nec enim molestie, tincidunt ante quis,
-            vulputate massa. Phasellus sed nisi diam. Sed scelerisque iaculis
-            leo ac pharetra.
+            I want to take this opportunity to reflect on the EnterpriseNGR
+            journey since our launch in October 2021. It has been a superb start
+            for us as we embark on our mission to make Nigeria the premier
+            financial services centre in Africa.
           </p>
           <br />
           <p>
-            Curabitur ut cursus elit. Aliquam pulvinar, odio sed molestie
-            auctor, urna est gravida libero, vel ullamcorper ex libero vel
-            mauris. Integer semper magna enim. Suspendisse ipsum urna, imperdiet
-            vitae dignissim sit amet, lobortis quis orci. Vestibulum quis tempor
-            justo. Phasellus auctor leo at neque ullamcorper, at aliquet ipsum
-            egestas. Etiam accumsan leo et eros consequat tempor.
+            Our launch event tagged, <strong>the Voices of Enterprise</strong> ,
+            was a huge success with high-level speakers including amongst others
+            the Vice President of Nigeria, the globally acclaimed investment and
+            finance guru, Bayo Ogunlesi, our friends from Enterprise Singapore,
+            and TheCityUK – two organisations we seek to model. Attendance at
+            the virtual event was phenomenal and the discourse was at peak
+            levels. That was indeed our big bang moment and a great start.
+          </p>
+          <br />
+
+          <h3>Welcome to Our New Members</h3>
+          <p>
+            Following our official launch, we have focused on strengthening our
+            organisational structures and expanding our membership base. I'm
+            delighted to report that we have increased our membership base by
+            50% since our official launch. I wish acknowledge our new Founding
+            Members: DLM Capital Group, Investment One Financial Services
+            Limited and Custodian Investment Plc. who by this membership have
+            made a lifelong commitment towards building the Nigerian financial
+            and professional services ecosystem.
           </p>
           <br />
           <p>
-            Donec sit amet sem vitae ipsum rutrum volutpat. Orci varius natoque
-            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Nam blandit ante nec tempor tincidunt. Nunc sit amet mauris
-            imperdiet, dapibus nisl vel, varius eros. Integer ut enim quis arcu
-            volutpat dictum bibendum eget ligula. Suspendisse ut scelerisque
-            lectus. Integer in ullamcorper risus.
+            I also thank our new Gold subscription members who include the Bank
+            of Industry of Nigeria, First Ally Capital Limited, and Polaris
+            Bank. We are truly encouraged by your support. Recognition also goes
+            out to our new Silver and Bronze members – we appreciate you all.
+          </p>
+          <br />
+
+          <h3>New Partnerships</h3>
+          <p>
+            In creating a strong internal structure, we have focused on
+            entrenching global best practices by engaging like-minded
+            international organisations. I am pleased to note that we have
+            entered a knowledge-sharing arrangement with TheCityUK, the leading
+            advocacy group in the United Kingdom.
           </p>
           <br />
           <p>
-            In ac cursus lorem, vitae laoreet dolor. Pellentesque eget interdum
-            ipsum. Pellentesque ut turpis ac felis egestas blandit eu nec ipsum.
-            Vivamus quis rutrum arcu. Etiam pretium augue a est sodales
-            scelerisque. In ut risus ultricies, tempus est ut, blandit nisl.
-            Mauris dignissim sapien ut turpis tristique consectetur. Vestibulum
-            dui mauris, aliquam ac libero quis, fermentum dignissim libero.
-            Maecenas lacus ante, sollicitudin vel ipsum varius, pulvinar
-            dignissim urna. Nam et porta magna. Phasellus at nisl nisl. Nunc
-            fermentum quis dui id condimentum. Praesent congue, ante sed rutrum
-            dictum, metus ex sagittis leo, nec efficitur purus augue sit amet
-            nunc. Sed convallis mattis mattis. Sed vitae odio non eros mollis
-            condimentum. Duis maximus urna nisi, in tristique turpis congue at.
+            We attended the Kenya Fintech Forum an event organized by the
+            Nairobi International Financial Centre Authority (NIFCA) and
+            TheCityUK. It is the flagship event of the collaborative NIFCA /
+            TheCityUK Fintech Project. We were invited to attend by TheCityUK
+            with a view to explore similar collaborations for Nigeria. The event
+            was eye opening and we are poised to support the Fintech revolution
+            in Nigeria.
           </p>
           <br />
           <p>
-            Nam laoreet turpis sed accumsan maximus. Nunc non porttitor purus.
-            In aliquet consectetur dui, eu tincidunt nulla. Ut ac ullamcorper
-            ex. Nullam vitae molestie ligula. Nam dapibus, enim ac tincidunt
-            ornare, tortor libero sagittis ex, vel molestie nisl felis non erat.
-            Suspendisse blandit vestibulum turpis, sit amet auctor velit congue
-            ac. Maecenas ornare neque et imperdiet vehicula.
+            TheCityUK also graciously introduced us to the World Alliance of
+            International Financial Centers (WAIFC) and has agreed to support
+            our bid to become an Observer at the organisation as a prelude to
+            seeking full membership.
           </p>
+          <br />
+          <p>
+            WAIFC is a non-profit association registered in Brussels, Belgium.
+            It represents leading international financial centers and
+            facilitates cooperation and the exchange of best practices. WAIFC
+            members are city governments, associations, and institutions similar
+            to ours developing and promoting their financial centers. WAIFC
+            presently has 20 Members across all the continents of the world.
+            Member organisations include TheCityUK, Paris Europlace, Qatar
+            Financial Centre, Dubai International Financial Centre Authority,
+            Hong Kong Financial Services Development Council, FinCity.Tokyo,
+            Toronto Finance International, Casablanca Finance City and Rwanda
+            Finance Limited among others.
+          </p>
+          <br />
+          <p>
+            We attended the WAIFC Panel and observed their Board Meeting held in
+            Kigali, Rwanda. The event presented us with a unique opportunity to
+            network and associate with members of WAIFC who were all pleased
+            that Nigeria is ready to take its rightful place in the committee of
+            nations. WAIFC would like to see the development of more
+            international finance centers on the African continent and are very
+            keen to support us.
+          </p>
+          <br />
+          <p>
+            These partnerships are aimed at shortening our learning curve while
+            ensuring we start achieving positive impact in no time.
+          </p>
+          <br />
+
+          <h3>Continuing our Advocacy Work</h3>
+          <p>
+            With respect to our advocacy work we have identified data as a key
+            factor for analysing the issues affecting the sector and the country
+            at large. We had a meeting with the Statistician General of the
+            Federal Republic of Nigeria and we are working on Terms of Reference
+            for a partnership to generate accurate and granulated data for the
+            Financial and Professional Services sector to support. optimal
+            policy formulation.
+          </p>
+          <br />
+          <p>
+            I am excited to note that we are currently putting finishing touches
+            to our very first research output, the State of Enterprise report
+            which will be officially launched in Q2 of 2022. The report will
+            spotlight the sector and showcase baseline statistics with a view to
+            highlight the importance of the sector and also serve as a basis to
+            measure our performance against agreed indices.
+          </p>
+          <br />
+          <p>
+            I am also particularly delighted to report on our progress regarding
+            our first direct intervention tagged, the Youth of Enterprise (YOE).
+            This initiative is focused on onboarding 5,000 youth annually with a
+            view to upskill and place them in 6 months paid internships with our
+            partner organisations. The initiative will officially go live in Q2
+            of 2022, and we remain confident that the impact YOE will have on
+            the Nigerian economy will be far-reaching.
+          </p>
+          <br />
+
+          <h3>The Future is Bright</h3>
+          <p>
+            Though it is still early days for us at EnterpriseNGR, I dare say,
+            the dream is truly coming to life and we are well on the path to
+            laying a solid foundation towards achieving our lofty goals.
+          </p>
+          <br />
+          <p>
+            I do hope you enjoy this first instalment of our quarterly
+            newsletter and I enjoin you all to join hands with us to build the
+            FPS sector and Nigeria at large.
+          </p>
+          <br />
+          <p>
+            Thank you,
+            <br />
+            <br />
+            Obi Ibekwe
+            <br />
+            CEO.
+          </p>
+          <br />
         </div>
 
         <div class="share_article">
@@ -129,9 +221,9 @@
         </div>
         <div class="tag">
           <span class="bold">Tags:</span>
-          <span class="thin">Policy</span>
+          <span class="thin">News</span>
           <span class="thin">Insight</span>
-          <span class="thin">Enterprise</span>
+          <span class="thin">Media</span>
         </div>
       </div>
       <div class="search">
