--- a/greenstart.html
+++ b/greenstart.html
@@ -136,10 +136,10 @@
           <div class="bold">
             At EnterpriseNGR, we decided to not just point out the problem of
             unemployment, but to bring a solution to it. That is why we created
-            the Youths of Enterprise (YOE) Internship Programme.
+            the Youth of Enterprise (YOE) Internship Programme.
           </div>
           <div class="thin">
-            Youths of Enterprise (YOE) Internship Programme is one of
+            Youth of Enterprise (YOE) Internship Programme is one of
             EnterpriseNGR’s immediate developmental initiatives that aims to
             reverse the national youth unemployment and under-employment trends
             as well as build capacity in the private sector.
@@ -188,7 +188,7 @@
             Nigerian graduates with the requisite skills, qualifications and
             experience they need to excel in the financial services sector and
             stand shoulder to shoulder with their global counterparts through
-            the Youths Of Enterprise (YOE) initiative.
+            the Youth Of Enterprise (YOE) initiative.
           </div>
           <div class="btn">
             <a href="http://youthofenterprise.ng/login"
