--- a/news.html
+++ b/news.html
@@ -67,16 +67,18 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
+              <img src="images/CEO_desk.jpg" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="bold title">New Report: From the CEO’s Desk</div>
             <div class="text">
               <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
+                I want to take this opportunity to reflect on the EnterpriseNGR
+                journey since our launch in October 2021. It has been a superb
+                start for us as we embark on our mission to make Nigeria the
+                premier financial services centre in Africa.
               </div>
-              <a href="newsitem.html">
+              <a href="ceodesk.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
@@ -89,102 +91,7 @@
               >
             </div>
           </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
+          <div class="card"></div>
         </div>
       </div>
     </section>
