--- a/policy.html
+++ b/policy.html
@@ -41,18 +41,23 @@
     <section class="latest_news media">
       <div class="news">
         <div class="cards">
+          <!-- To maintain responsiveness, there should be a minimum of 3 card items
+          card divs can be left empty but should take the "card" class -->
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
+              <img src="images/unemployment.jpg" alt="" />
             </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="thin date">May 7 2022 | EnterpriseNGR</div>
+            <div class="bold title">
+              New Report: The State of Unemployment in Nigeria
+            </div>
             <div class="text">
               <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
+                The dire unemployment situation in Nigeria is worrisome. Many
+                graduates in the country continue to face challenges with
+                finding employment and this is a widespread concern.
               </div>
-              <a href="newsitem.html">
+              <a href="unemploymentstate.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
@@ -67,16 +72,18 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
+              <img src="images/stateofngr.jpg" alt="" />
             </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="thin date">May 7 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: March 2022 Policy Insights</div>
             <div class="text">
               <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
+                There is growing attention on Environmental, Social and
+                Governance, or ESG for short, around the globe, just as various
+                stakeholders, including investors, companies, regulatory
+                bodies...
               </div>
-              <a href="newsitem.html">
+              <a href="policyinsight.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
@@ -89,102 +96,7 @@
               >
             </div>
           </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
-            </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
-              </div>
-              <a href="newsitem.html">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
+          <div class="card"></div>
         </div>
       </div>
     </section>
