--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
+              <img src="images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
