--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -39,34 +39,30 @@
     </header>
 
     <div class="category">
-      <div class="child green">Policy & Research ></div>
+      <div class="child green">News & Media ></div>
       <div class="child grey">
-        New Report: The State of Unemployment in Nigeria
+        New Report: Youth of Enterprise (YOE) Internship Programme Launch
       </div>
     </div>
 
     <article class="article">
       <div class="article_body">
         <div class="image">
-          <img src="images/unemployment.jpg" alt="" />
+          <img src="images/yoe-invitation-img.png" alt="" />
         </div>
         <div class="article_detail">
-          <div class="child green">Policy,Insight |</div>
+          <div class="child green">News,Media |</div>
           <div class="child">April 12, 2022 |</div>
-          <div class="child">Peter Allan |</div>
-          <div class="child">Comments: 0</div>
         </div>
-        <div class="md_heading">The State of Unemployment in Nigeria</div>
+        <div class="md_heading">
+          SAVE THE DATE | Youth of Enterprise (YOE) Internship Programme Launch
+        </div>
         <div class="article_text">
           <p>
-            The dire unemployment situation in Nigeria is worrisome. Many
-            graduates in the country continue to face challenges with finding
-            employment and this is a widespread concern. The International
-            Labour Organisation (ILO) has linked unemployment in Nigeria to the
-            phenomenon of a jobless growth economy, increased number of school
-            graduates with no matching job opportunities, a moratorium on
-            employment in many public and private sector institutions, and
-            continued job losses in several sectors within the country.
+            We are pleased to invite you to the formal launch of our Youth of
+            Enterprise (YOE) Internship Programme. This virtual event is
+            scheduled to hold on Thursday, 12 May 2021, at 1 PM (West African
+            Time).
           </p>
           <br />
           <p>
@@ -82,82 +78,45 @@
           </p>
           <br />
           <p>
-            The depth of Nigeria’s unemployment crisis is particularly evident
-            amongst Nigerian youth with about 2 in 5 youths between the ages of
-            15 and 35 affected and unemployed. With an economy just exiting
-            recession and grappling with sustainable economic growth, tackling
-            youth unemployment is an urgent imperative and validates our ethos
-            at EnterpriseNGR.
+            [REGISTER HERE]
+            <a href="https://jnml.io/YouthOfEnterprise"
+              >https://jnml.io/YouthOfEnterprise</a
+            >
           </p>
           <br />
           <p>
-            There are many interventions both public and private sectors driven-
-            some of which are disruptive with the use of technology. Most of
-            these are all targeted at solving this problem through
-            entrepreneurship. So many funding opportunities, capacity building
-            trainings, entrepreneurship support, consulting, advisory and many
-            more that are targeted at enterprise development but only a few
-            focusing on employability and internship placements for our young
-            and vibrant youth who are either employable but not employed or can
-            be upskilled and prepped to become employable.
+            The Youth of Enterprise (YOE) Internship Programme is a flagship
+            initiative of EnterpriseNGR designed to help address national youth
+            unemployment and enhance Nigeria’s future productive capacity. YOE
+            aims to improve the skillsets, professional competence, and
+            employability of young graduates and place them in high-value
+            internships, thus positioning them for meaningful career journeys.
           </p>
           <br />
           <p>
-            EnterpriseNGR has identified employability and unemployment issues
-            as one that will come back to bite us all if it’s not looked into
-            and nipped in the bud early enough. This constitutes part of the
-            reason why we are heavily invested in supporting young Nigerians to
-            make meaning of their lives through employability channels. Our
-            graduates constantly face long- term unemployment or underemployment
-            challenges due to various factors including the increasing demand
-            from the workplace. They will be unable to find work until they
-            obtain the relevant skills that are in high demand within the
-            ecosystem and the future of work.
+            The YOE Internship Programme is a paid six-month programme that
+            offers Nigerian youth the perfect opportunity to re-invent
+            themselves and “GREENSTART” their careers.
           </p>
           <br />
           <p>
-            Furthermore, there is the need for the redesign of our tertiary
-            institution curricular such that they are more robust and inclusive
-            with content closing the skills gap that our potential employees do
-            not have. By gaining these skills, they become relevant and
-            attractive to employers, employable and better positioned for job
-            opportunities.
+            [REGISTER HERE]
+            <a href="https://jnml.io/YouthOfEnterprise"
+              >https://jnml.io/YouthOfEnterprise</a
+            >
           </p>
           <br />
-          <p>
-            There is the need to sensitize and create awareness of the skills
-            for the future and this can be done through programmes and
-            interventions from the university level with the aim of resetting
-            the mindsets of our youth even before they graduate.
-          </p>
-          <br />
-          <p>
-            There is the need for employers to shift their focus from people who
-            are already employed to people who are not employed, upskill them to
-            close the skills gap and then give them the opportunity to work. We
-            can find them within Universities, Nigerian Youth Service Corp and
-            just out of the Nigerian Youth Service Corp. This is infact where
-            the gap is. There is need for them to closely partner with such
-            organizations as EnterpriseNGR to assess their employment gaps,
-            project their employment needs over the next 5 to 10 years, and to
-            map an employment road map to fill this gap so they can meet their
-            growth plans now and in the future.
-          </p>
-          <br />
-          <p>
-            As with many other countries around the world, COVID-19 had a
-            significant impact on Nigeria’s population and the structure of work
-            and career advancement and so now more than ever, the urgency for
-            the adoption of workable strategies that produce future ready
-            employees (employable youth) is pertinent given the burgeoning
-            youthful population of the country.
-          </p>
-          <br />
-          <p>
-            At EnterpriseNGR, we are building a network of growth companies and
-            a community of highly employable Nigerian youth equipped with the
-            skills for the future and prepped up for the future of work!
-          </p>
+
+          <div class="image">
+            <img src="images/speakers.png" alt="Speakers" />
+          </div>
+
+          <div class="image">
+            <img
+              src="images/email-members-logos3.png"
+              alt="Membership partners"
+            />
+          </div>
         </div>
 
         <div class="share_article">
