--- a/member.html
+++ b/member.html
@@ -250,10 +250,10 @@
           <img src="images/img2.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img3.png" alt="partner_logo" />
+          <img src="images/img3.jpeg" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img4.png" alt="partner_logo" />
+          <img src="images/img4.jpg" alt="partner_logo" />
         </div>
         <div class="image">
           <img src="images/img5.png" alt="partner_logo" />
