--- a/news.html
+++ b/news.html
@@ -46,13 +46,17 @@
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="bold title">
+              New Report: Youth of Enterprise (YOE) Internship Programme Launch
+            </div>
             <div class="text">
               <div class="thin description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                non sapien accumsan, commodo turpis a, accumsan sem.
+                We are pleased to invite you to the formal launch of our Youth
+                of Enterprise (YOE) Internship Programme. This virtual event is
+                scheduled to hold on Thursday, 12 May 2021, at 1 PM (West
+                African Time).
               </div>
-              <a href="newsitem.html">
+              <a href="internshiplaunch.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
