--- a/member.html
+++ b/member.html
@@ -314,141 +314,61 @@
       </div>
     </section>
 
-    <div class="agenda_wrapper news">
-      <section class="agenda_news">
-        <div class="news">
-          <div class="sm_heading">KEEP UP TO DATE</div>
-          <div class="md_heading">Latest News</div>
-          <div class="thin">
-            The latest news from EnterpriseNGR and the financial services
-            sector.
-          </div>
-          <div class="cards">
-            <div class="card">
-              <div class="image">
-                <img src="images/Rectangle 83.png" alt="" />
-              </div>
-              <div class="sm_heading text">19 May 2022</div>
-              <div class="bold text">New Report: 2022 State of Enterprise</div>
-              <div class="text">
-                <a href="newsitem.html"
-                  ><button class="md_btn">
-                    <span
-                      class="iconify"
-                      data-icon="bi:arrow-right-circle-fill"
-                      style="color: black"
-                      data-width="26"
-                    ></span>
-                    <span class="btn_text">Read More</span>
-                  </button></a
-                >
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/Rectangle 87.png" alt="" />
-              </div>
-              <div class="sm_heading text">19 May 2022</div>
-              <div class="bold text">New Report: 2022 State of Enterprise</div>
-              <div class="text">
-                <a href="newsitem.html"
-                  ><button class="md_btn">
-                    <span
-                      class="iconify"
-                      data-icon="bi:arrow-right-circle-fill"
-                      style="color: black"
-                      data-width="26"
-                    ></span>
-                    <span class="btn_text">Read More</span>
-                  </button></a
-                >
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/Rectangle 91.png" alt="" />
-              </div>
-              <div class="sm_heading text">19 May 2022</div>
-              <div class="bold text">New Report: 2022 State of Enterprise</div>
-              <div class="text">
-                <a href="newsitem.html"
-                  ><button class="md_btn">
-                    <span
-                      class="iconify"
-                      data-icon="bi:arrow-right-circle-fill"
-                      style="color: black"
-                      data-width="26"
-                    ></span>
-                    <span class="btn_text">Read More</span>
-                  </button></a
-                >
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/Rectangle 95.png" alt="" />
-              </div>
-              <div class="sm_heading text">19 May 2022</div>
-              <div class="bold text">New Report: 2022 State of Enterprise</div>
-              <div class="text">
-                <a href="newsitem.html"
-                  ><button class="md_btn">
-                    <span
-                      class="iconify"
-                      data-icon="bi:arrow-right-circle-fill"
-                      style="color: black"
-                      data-width="26"
-                    ></span>
-                    <span class="btn_text">Read More</span>
-                  </button></a
-                >
-              </div>
-            </div>
-          </div>
+    <section class="latest_news">
+      <div class="news">
+        <div class="sm_heading">KEEP UP TO DATE</div>
+        <div class="md_heading">Latest News</div>
+        <div class="thin">
+          The latest news from EnterpriseNGR and the financial services sector.
         </div>
-
-        <section class="enterprise_voice">
-          <div class="voice">
-            <div class="md_heading">
-              <div>EnterpriseNGR |</div>
-              <div>Voice of Enterprise</div>
+        <div class="cards">
+          <div class="card">
+            <div class="image">
+              <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="thin">
-              Annual EnterpriseNGR event to engage key industry stakeholders
-              (both globally and in Nigeria) as well as policymakers at all
-              levels of government.
+            <div class="sm_heading text">19 May 2022</div>
+            <div class="bold text">New Report: From the CEO’s Desk</div>
+            <div class="text">
+              <a href="ceodesk.html"
+                ><button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
             </div>
-            <a href="greenstart.html">
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span
-                ><span class="btn_text">Learn More</span>
-              </button></a
-            >
           </div>
-          <div class="green">
-            <div>JOIN NOW</div>
-            <div class="md_heading">Monthly Newsletter</div>
-            <form action="">
-              <input type="email" placeholder="Enter your email address" />
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: #40ba7b"
-                  data-width="26"
-                ></span
-                ><span class="btn_text">Subscribe</span>
-              </button>
-            </form>
+          <div class="card">
+            <div class="image">
+              <img src="images/yoe-invitation-img.png" alt="" />
+            </div>
+            <div class="sm_heading text">19 May 2022</div>
+            <div class="bold text">
+              Youth of Enterprise (YOE) Internship Programme Launch
+            </div>
+            <div class="text">
+              <a href="internshiplaunch.html"
+                ><button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
-        </section>
-      </section>
-    </div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </div>
+    </section>
 
     <footer>
       <div class="contact_info">
