--- a/unemploymentstate.html
+++ b/unemploymentstate.html
@@ -193,7 +193,7 @@
       </div>
     </article>
 
-    <section class="latest_news newscard">
+    <section class="latest_news">
       <div class="news">
         <div class="sm_heading">KEEP UP TO DATE</div>
         <div class="md_heading">Latest News</div>
@@ -203,13 +203,13 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 83.png" alt="" />
+              <img src="images/CEO_desk.jpg" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
+            <div class="bold text">New Report: From the CEO’s Desk</div>
             <div class="text">
-              <a href="newsitem.html">
-                <button class="md_btn">
+              <a href="ceodesk.html"
+                ><button class="md_btn">
                   <span
                     class="iconify"
                     data-icon="bi:arrow-right-circle-fill"
@@ -221,16 +221,17 @@
               >
             </div>
           </div>
-
           <div class="card">
             <div class="image">
-              <img src="images/Rectangle 95.png" alt="" />
+              <img src="images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
+            <div class="bold text">
+              Youth of Enterprise (YOE) Internship Programme Launch
+            </div>
             <div class="text">
-              <a href="newsitem.html">
-                <button class="md_btn">
+              <a href="internshiplaunch.html"
+                ><button class="md_btn">
                   <span
                     class="iconify"
                     data-icon="bi:arrow-right-circle-fill"
@@ -242,7 +243,6 @@
               >
             </div>
           </div>
-
           <div class="card"></div>
           <div class="card"></div>
         </div>
