--- a/unemploymentstate.html
+++ b/unemploymentstate.html
@@ -40,9 +40,7 @@
 
     <div class="category">
       <div class="child green">Policy & Research ></div>
-      <div class="child grey">
-        New Report: The State of Unemployment in Nigeria
-      </div>
+      <div class="child grey">The State of Unemployment in Nigeria</div>
     </div>
 
     <article class="article">
