--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -41,7 +41,7 @@
     <div class="category">
       <div class="child green">News & Media ></div>
       <div class="child grey">
-        New Report: Youth of Enterprise (YOE) Internship Programme Launch
+        Youth of Enterprise (YOE) Internship Programme Launch
       </div>
     </div>
 
